--- a/main/webapp/navbar.html
+++ b/main/webapp/navbar.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#855e18"> <!-- bg-dark -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color:#855e18"> <!-- bg-dark -->
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Jewellery Billing</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
