--- a/webapp/navbar.html
+++ b/webapp/navbar.html
@@ -12,7 +12,7 @@
                         <a class="nav-link active" href="adminDashboard.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.jsp">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
+                        <a class="nav-link bg-danger rounded" href="index.jsp">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
                     </li>
                 </ul>
             </div>
