--- a/webapp/sideBarDropDownMenu.html
+++ b/webapp/sideBarDropDownMenu.html
@@ -3,20 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    
 	<style>
 		.dropdown:hover{
 			background-color:wheat;
 				
 			color:black;
 		}
-		
-		
-		
-		.row .col-md-2{
-			box-shadow: 0px 10px 10px #B98522;
-		}
-
 		 .list-group a{
 			background-color: transparent;
 			color: white;
@@ -60,8 +53,8 @@
                 Loans
             </button>
             <ul class="dropdown-menu w-100 bg-dark fw-bold" aria-labelledby="loanDropdown" style="color:white">
-                <li><a class="dropdown-item" href="loanProvided.jsp">Loans Provided</a></li>
-                <li><a class="dropdown-item" href="newLoan.jsp">New Loan</a></li>
+            	<li><a class="dropdown-item" href="newLoan.jsp">New Loan</a></li>
+            	<li><a class="dropdown-item" href="loanProvided.jsp">Loans Provided</a></li>
             </ul>
         </div>
 		
@@ -69,8 +62,7 @@
         <a href="displayInvoiceData" class="list-group-item list-group-item-action">Generate Invoice</a>
     </div>
 </div>
-
-<script src="bootstrap.bundle.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
    <script>
     	function load_Customer_Data() {
         	console.log("Fetching Customer data...");
