--- a/webapp/navbar.html
+++ b/webapp/navbar.html
@@ -1,17 +1,18 @@
 <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#855e18"> <!-- bg-dark -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color:#855e18"> <!-- bg-dark -->
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Jewellery Billing</a>
+        	<img alt="" src="AppLogo.png" style="width:60px;height:60px;">
+            <a class="navbar-brand" href="#" >MANIKARNIKA JEWELLERS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="adminDashboard.html">Dashboard</a>
+                        <a class="nav-link active" href="adminDashboard.jsp">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.jsp">Logout</a>
+                        <a class="nav-link bg-danger rounded" href="index.jsp">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
                     </li>
                 </ul>
             </div>
